# Satto

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/pycline/: __init__.py  config.py
src/pycline/api/: __init__.py  api_handler.py
src/pycline/api/providers/: anthropic.py
src/pycline/assistant_message/: attempt_completion_tool.py
src/pycline/core/: __init__.py  pycline.py  responses.py
src/pycline/core/assistant_message/: __init__.py  assistant_message.py  attempt_completion_tool.py  list_files_tool.py  parse_assistant_message.py  plan_mode_response_tool.py  read_file_tool.py  replace_in_file_tool.py  search_files_tool.py  tool.py  write_to_file_tool.py
src/pycline/core/mcp/: mcp_hub.py
src/pycline/core/prompts/: system.py
src/pycline/services/glob/: __init__.py  list_files.py
src/pycline/services/ripgrep/: search.py
src/pycline/shared/: __init__.py
src/pycline/utils/: __init__.py  cost.py  history.py  path.py  string.py
src/pycline_cli/: __init__.py  main.py  table.py
src/satto/: __init__.py
src/satto/api/: __init__.py  api_handler.py
src/satto/api/providers/: __init__.py  anthropic.py  api_handler_base.py  deepseek.py  openai.py  openai_native.py  together.py  together_openai.py
src/satto/api/transform/: openai_format.py  r1_format.py
src/satto/core/: __init__.py  responses.py  satto.py
src/satto/core/mcp/: __init__.py  (+1 more)
src/satto/shared/: api.py  auto_approval_settings.py  browser_settings.py  dicts.py  utils.py
src/satto/utils/: __init__.py  cost.py  history.py  log_print.py
src/satto_cli/: __init__.py  main.py
(+18 files in other folders)
