[project]
name = "satto"
version = "0.0.4"
description = "swiftly coding agent"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["satto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests", 
    "prettytable", 
    "anthropic"]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
    "black",
    "flake8",
    "mypy",
    "isort",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/dusking/satto"
"Bug Reports" = "https://github.com/dusking/satto/issues"
"Source" = "https://github.com/dusking/satto.git"

[tool.black]
line-length = 120
ignore = "E203"

[project.scripts]
satto = "satto_cli.main:main"
